--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>travel</title>
-    <script src="./plusShare.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but travel doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+    content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>travel</title>
+  <script src="./plusShare.js"></script>
+  <script src="./plusGeolocation.js"></script>
+  <script src="./plusPay.js"></script>
+  <script src="./app.api.1.0.2.js"></script>
+  <script>
+    var pays = {};
+    function plusReady() {
+      // 获取支付通道
+      plus.payment.getChannels(function (channels) {
+        console.log(channels)
+      }, function (e) {
+        alert('获取支付通道失败：' + e.message);
+      });
+    }
+    document.addEventListener('plusready', plusReady, false);
+  </script>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but travel doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
